attachment and undo-inherit icon overlap fix

--- a/public/src/fonts/_glyphs-variables.scss
+++ b/public/src/fonts/_glyphs-variables.scss
@@ -5,7 +5,7 @@
 
 $font-glyphs-abandoned-call: "\f1e5";
 $font-glyphs-account: "\f100";
-$font-glyphs-add-attachment: "\f266";
+$font-glyphs-add-attachment: "\f26a";
 $font-glyphs-add-call: "\f21f";
 $font-glyphs-agent: "\f101";
 $font-glyphs-agent-fchat-off: "\f1b0";
