--- a/public/src/fonts/_glyphs.scss
+++ b/public/src/fonts/_glyphs.scss
@@ -4,11 +4,11 @@
 
 @font-face {
   font-family: "glyphs";
-  src: font-url("glyphs_b913aa0f3070780ae53a792d685d21af.eot");
-  src: font-url("glyphs_b913aa0f3070780ae53a792d685d21af.eot?#iefix") format("embedded-opentype"),
-       font-url("glyphs_b913aa0f3070780ae53a792d685d21af.woff") format("woff"),
-       font-url("glyphs_b913aa0f3070780ae53a792d685d21af.ttf") format("truetype"),
-       font-url("glyphs_b913aa0f3070780ae53a792d685d21af.svg#glyphs") format("svg");
+  src: font-url("glyphs_c06c2d002d87eba5240594f76a06f29d.eot");
+  src: font-url("glyphs_c06c2d002d87eba5240594f76a06f29d.eot?#iefix") format("embedded-opentype"),
+       font-url("glyphs_c06c2d002d87eba5240594f76a06f29d.woff") format("woff"),
+       font-url("glyphs_c06c2d002d87eba5240594f76a06f29d.ttf") format("truetype"),
+       font-url("glyphs_c06c2d002d87eba5240594f76a06f29d.svg#glyphs") format("svg");
   font-weight: normal;
   font-style: normal;
 }
@@ -16,7 +16,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: "glyphs";
-    src: font-url("glyphs_b913aa0f3070780ae53a792d685d21af.svg#glyphs") format("svg");
+    src: font-url("glyphs_c06c2d002d87eba5240594f76a06f29d.svg#glyphs") format("svg");
   }
 }
 
@@ -384,7 +384,7 @@
 
 .ficon-abandoned-call:before { content: "\f1e5"; }
 .ficon-account:before { content: "\f100"; }
-.ficon-add-attachment:before { content: "\f266"; }
+.ficon-add-attachment:before { content: "\f26a"; }
 .ficon-add-call:before { content: "\f21f"; }
 .ficon-agent:before { content: "\f101"; }
 .ficon-agent-fchat-off:before { content: "\f1b0"; }
